--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,7 @@
   
   }
   body{
-    background-image: url('desktop\ bg\ dark.jpg');
+    background-image: url('/home/mohan/Desktop/to-do/public/image/bg-desktop-light.jpg');
     background-repeat: no-repeat;
     background-size: 100% 30%;
     background-color: white;
@@ -14,8 +14,8 @@
   }
   
   .container{
-    min-height: 100vh;
-    width: 100vw;
+    height: 89vh;
+    width: 100%;
   }
   
   .main-container{
@@ -39,4 +39,10 @@
   img{
     width:35px;
     height: 35px;
+  }
+  @media (min-width:30px)and (max-width:767px) {
+    .main-container{
+      /* max-width: 540px; */
+      margin: 0% 10%;
+    }
   }
