--- a/src/form.css
+++ b/src/form.css
@@ -38,7 +38,7 @@ ul{
     
 }
 
-li{
+.lists{
     border-bottom: 1px solid #e4e5f1;
     color: #777a92;
     position: relative;
@@ -52,6 +52,21 @@ li{
     outline-color: #3a7bfd;
     background-color: white;
 }
+.lists-black{
+    border-bottom: 1px solid #393a4c;
+    color: #777a92;
+    position: relative;
+    cursor: pointer;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    font-size: 18px;
+    letter-spacing: -.25px;
+    outline-color: #3a7bfd;
+    background-color: #25273c;
+}
+
 .item-check {
     display: inline-block;
     border-radius: 50%;
@@ -85,9 +100,15 @@ li{
     margin-right: 12px; */
 }
 
-svg{
+.svg{
     position: absolute;
     right: 5%;
+    fill:black;
+}
+.svg-black{
+    position: absolute;
+    right: 5%;
+    fill:#cacde8;
 }
 svg:hover{
     fill: red;
